--- a/css/style.css
+++ b/css/style.css
@@ -152,7 +152,7 @@ ul {
 .biopic {
   float: left;
   padding: 10px;
-  width: 200px;
+  width: 33%;
   display: none;
 }
 
@@ -211,4 +211,8 @@ span {
   .biopic {
     display: block;
   }
+}
+
+.projectPic {width: 48%;
+height: 467px;
 }
