--- a/css/style.css
+++ b/css/style.css
@@ -117,6 +117,14 @@ a {
   color: #fff;
 }
 
+.link-topcontacts {
+  color: white; 
+  padding: 5px;
+  font-weight: bold;
+  display: inline;
+
+}
+
 .gray {
   background-color: #f3f3f3;
   padding-bottom: 10px;
